reorganizacion de zampos y arreglo de libro

--- a/materiales/templates/materiales/formularios_altas/alta_mapa.html
+++ b/materiales/templates/materiales/formularios_altas/alta_mapa.html
@@ -12,14 +12,15 @@
         </div>
         
         <div class="col-md-3">
+            <label for="num_registro" class="form-label small">Tipo a Registrar <span class="text-danger">*</span></label>
+            <input type="text" class="form-control form-control-sm" id="num_registro" name="num_registro" required>
+        </div>
+
+        <div class="col-md-3">
             <label for="cant_ejemplares" class="form-label small">Cant. de ejemplares <span class="text-danger">*</span></label>
             <input type="number" class="form-control form-control-sm" id="cant_ejemplares" name="cant_ejemplares" min="1" value="1" required>
         </div>
         
-        <div class="col-md-3">
-            <label for="num_registro" class="form-label small">N° de Registro <span class="text-danger">*</span></label>
-            <input type="text" class="form-control form-control-sm" id="num_registro" name="num_registro" required>
-        </div>
     </div>
     
     <div class="row mb-3">
