--- a/materiales/templates/materiales/formularios_altas/alta_programa.html
+++ b/materiales/templates/materiales/formularios_altas/alta_programa.html
@@ -3,22 +3,14 @@
   {% load static %}
   <div data-block="content" data-form-type="programa">
     <div class="row mb-3">
-      <div class="col-2">
-        <label for="profesor">Profesor/a</label>
-        <input type="text" class="form-control" id="profesor" name="profesor" required placeholder="Nombre completo del profesor/a">
+      <div class="col-md-3">
+        <label for="profesor">Profesor/a<span class="text-danger">*</span></label>
+        <input type="text" class="form-control" id="profesor" name="profesor" required placeholder="Escriba aquí...">
       </div>
-    </div>
-    <div class="row mb-3">
-      <div class="col-2">
-        <label for="url">Ingresar enlace (URL) <span class="text-danger">*</span></label>
-        <div class="input-group">
-            <input type="url" class="form-control" id="url" name="url" required placeholder="URL del programa">
-        </div>
-      </div>
-      <div class="col-md-2">
-        <label for="carrera">Carrera <span class="text-danger">*</span></label>
+      <div class="col-md-4">
+        <label for="carrera">Carrera<span class="text-danger">*</span></label>
         <select class="form-control" id="carrera" name="carrera" required>
-          <option value="">Seleccionar Carrera</option>
+          <option value="">Aún sin seleccionar</option>
           <option value="Análisis de Sistemas">Tecnicatura Superior en Análisis de Sistemas</option>
           <option value="Ciencias Políticas">Profesorado de Educación Secundaria en Ciencias Políticas</option>
           <option value="Geografía">Profesorado de Educación Secundaria en Geografía</option>
@@ -27,10 +19,23 @@
           <option value="Otra">Otra carrera</option>
         </select>
       </div>
-      <div class="col-md-2">
-        <label for="materia">Materia <span class="text-danger">*</span></label>
+      <div class="col-md-5">
+        <label for="materia">Materia<span class="text-danger">*</span></label>
         <input type="text" class="form-control" id="materia" name="materia" required 
-               placeholder="Nombre completo de la materia">
+               placeholder="Aún sin seleccionar">
+      </div>
+    </div>
+    
+    <div class="row mb-3">
+      <div class="col-md-7">
+        <label for="url">Ingresar enlace (URL)<span class="text-danger">*</span></label>
+        <div class="input-group">
+            <input type="url" class="form-control" id="url" name="url" required placeholder="Pegue un enlace aquí...">
+        </div>
+      </div>
+      <div class="col-md-5">
+        <label for="ciclo_lectivo">Ciclo lectivo<span class="text-danger">*</span></label>
+        <input type="text" class="form-control" id="ciclo_lectivo" name="ciclo_lectivo" required placeholder="Escriba aquí...">
       </div>
     </div>
     <!-- Contenedor para los ejemplares -->
